Fixed css regarding textareas resizing and background alignment and added favicon

--- a/www/css/default.css
+++ b/www/css/default.css
@@ -1,6 +1,7 @@
 body{
     background-image: url("../images/bg_body.png");
-	
+	background-attachment: fixed;
+
 }
 .game .panel-body,
 .game .panel-body .grp-edit,
@@ -22,11 +23,15 @@ body{
 	border-radius: 20px;
 	text-align: center;
 	padding:14px;
-	
+
 	border: 4px solid #ffd800;
 	background: papayawhip;
 }
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover{
     background-color:yellowgreen;
+}
+
+textarea{
+	resize:none;
 }
